// Copyright 2024 Ant Group Co., Ltd.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package envoy.extensions.filters.http.kuscia_receiver.v3;
option go_package = "github.com/secretflow/kuscia-envoy/kuscia/api/filters/http/receiver/v3";

message RequestMessage {
    string id                   = 1;
    string host                 = 2;
    string path                 = 3;
    string method               = 4;
    map<string, string> headers = 5;
    bytes body                  = 6;
}
message ResponseMessage {
    int32 status_code           = 1;
    map<string, string> headers = 2;
    bytes body                  = 3;
    bool end_stream             = 4;
    bool chunk_data             = 5;
    int32 index                 = 6;
}